# flask-project

./: .gitignore  Makefile  Procfile  README.md  app.py  build.sh  cookie_user_repository.py  example.py  pyproject.toml  session_user_repository.py  setup.cfg  user_repository.py  users_app.py  utils.py  validate.py
data/: init.sql  users.json
flask_example_env/: pyvenv.cfg
static/css/: styles.css
templates/schools/: index.html  layout.html
templates/users/: 404.html  edit.html  index.html  layout.html  new.html  show.html  users.html
