[tool.poetry]
name = "hexlet-flask-example"
version = "0.1.0"
description = "First Flask project"
authors = ["Astrella.Ne <mycuttingapp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
data = "^0.4"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
